<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/Coronavirus"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coronavirus" />

    <Button
        android:id="@+id/virusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/Virus_Bottom"
        app:layout_constraintBaseline_toBaselineOf="@+id/sintomasButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sintomasButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Sintomas_Bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/indicacionesButton"
        app:layout_constraintStart_toEndOf="@+id/virusButton" />

    <Button
        android:id="@+id/indicacionesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/Indicaciones_Bottom"
        app:layout_constraintBaseline_toBaselineOf="@+id/sintomasButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/Nombre_Text"
        app:layout_constraintBaseline_toBaselineOf="@+id/nombre_edit"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nombre_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Nombre_edit"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/nombre"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/edad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:text="@string/Edad_Text"
        app:layout_constraintBaseline_toBaselineOf="@+id/edad_edit"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edad_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Edad_edit"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/edad"
        app:layout_constraintTop_toBottomOf="@+id/nombre_edit" />

    <ImageButton
        android:id="@+id/riesgo_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Coronavirus"
        app:layout_constraintVertical_bias="0.178"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/informacion"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="TextView"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/sintomasButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edad_edit"
        app:layout_constraintVertical_bias="0.239" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/Riesgo_Text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/riesgo_button" />
</androidx.constraintlayout.widget.ConstraintLayout>